--- a/main.html
+++ b/main.html
@@ -8,6 +8,39 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<table>
+		<thread>
+			<tr>
+				<th>Roll numbers</th>
+				<th>Names</th>
+			</tr>
+		</thread>
+		<
+			<tbody>
+				<tr>
+					<td>1</td>
+					<td>ajay</td>
+				</tr>
+				<tr>
+					<td>1</td>
+					<td>vijay</td>
+				</tr>
+			</tbody>
+	</table>
+	<h1>List of medias</h1>
+	<ol>
+		<li>
+			<img src="https://picsum.photos/id/123/200/300">
+		</li>
+		<li>
+			<video src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4" autoplay>
+				<source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4">
+			</video>
+		</li>
+		<li>
+			<audio src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg" ></audio>
+		</li>
+	</ol>
     <script type="text/javascript" src="./script.js">
 </script>
 
