--- a/main.html
+++ b/main.html
@@ -30,7 +30,7 @@
 	<h1>List of medias</h1>
 	<ol>
 		<li>
-			<img src="https://picsum.photos/id/123/200/300">
+			<img src="https://picsum.photos/id/123/200/300" alt="photos">
 		</li>
 		<li>
 			<video src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4" autoplay>
@@ -38,7 +38,7 @@
 			</video>
 		</li>
 		<li>
-			<audio src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg" ></audio>
+			<audio src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg" autoplay ></audio>
 		</li>
 	</ol>
     <script type="text/javascript" src="./script.js">
