--- a/main.html
+++ b/main.html
@@ -38,7 +38,7 @@
 			</video>
 		</li>
 		<li>
-			<audio src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg" autoplay ></audio>
+			<audio src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg" autoplay >audio</audio>
 		</li>
 	</ol>
     <script type="text/javascript" src="./script.js">
