--- a/main.html
+++ b/main.html
@@ -15,7 +15,7 @@
 				<th>Names</th>
 			</tr>
 		</thread>
-		<
+		
 			<tbody>
 				<tr>
 					<td>1</td>
@@ -33,12 +33,12 @@
 			<img src="https://picsum.photos/id/123/200/300" alt="photos">
 		</li>
 		<li>
-			<video src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4" autoplay>
+			<video src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4" autoplay controls height="300">
 				<source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4">
 			</video>
 		</li>
 		<li>
-			<audio src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg" autoplay >audio</audio>
+			<audio src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg" autoplay controls >audio</audio>
 		</li>
 	</ol>
     <script type="text/javascript" src="./script.js">
