--- a/main.html
+++ b/main.html
@@ -4,6 +4,12 @@
 
 <head>
 	<link rel="stylesheet" href="styles.css">
+	<style>
+		table,th,td{
+			border:1px solid;
+			border-collapse:collapse;
+		}
+	</style>
 </head>
 
 <body>
