--- a/main.html
+++ b/main.html
@@ -13,40 +13,49 @@
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
-	<table>
-		<thread>
-			<tr>
-				<th>Roll numbers</th>
-				<th>Names</th>
-			</tr>
-		</thread>
-		
-			<tbody>
-				<tr>
-					<td>1</td>
-					<td>ajay</td>
-				</tr>
-				<tr>
-					<td>1</td>
-					<td>vijay</td>
-				</tr>
-			</tbody>
-	</table>
-	<h1>List of medias</h1>
-	<ol>
-		<li>
-			<img src="https://picsum.photos/id/123/200/300" alt="photos">
-		</li>
-		<li>
-			<video src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4" autoplay controls height="300">
-				<source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4">
-			</video>
-		</li>
-		<li>
-			<audio src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg" autoplay controls >audio</audio>
-		</li>
-	</ol>
+	
+  <h1>List of Media</h1>
+
+  <table>
+    <thead>
+      <tr>
+        <th>Roll Number</th>
+        <th>Name</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td>1</td>
+        <td>John Doe</td>
+      </tr>
+      <tr>
+        <td>2</td>
+        <td>Jane Smith</td>
+      </tr>
+      <tr>
+        <td>3</td>
+        <td>David Johnson</td>
+      </tr>
+    </tbody>
+  </table>
+
+  <h2>List of Media</h2>
+
+  <ol>
+    <li>
+      <img src="https://picsum.photos/id/123/200/300" alt="Random Image">
+    </li>
+    <li>
+      <video controls>
+        <source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4" type="video/mp4">
+      </video>
+    </li>
+    <li>
+      <audio controls>
+        <source src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg" type="audio/ogg">
+      </audio>
+    </li>
+  </ol>
     <script type="text/javascript" src="./script.js">
 </script>
 
