--- a/main.html
+++ b/main.html
@@ -4,17 +4,17 @@
 
 <head>
 	<link rel="stylesheet" href="styles.css">
-	<style>
+<!-- 	<style>
 		table,th,td{
 			border:1px solid;
 			border-collapse:collapse;
 		}
-	</style>
+	</style> -->
 </head>
 
 <body>
 	
-  <h1>List of Media</h1>
+<!--   <h1>List of Media</h1> -->
 
   <table>
     <thead>
@@ -46,8 +46,8 @@
       <img src="https://picsum.photos/id/123/200/300" alt="Random Image">
     </li>
     <li>
-      <video controls>
-        <source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4" type="video/mp4">
+      <video controls >
+        <source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4" type="video/mp4"alt="">
       </video>
     </li>
     <li>
